[package]
name = "steamworksjs"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# 允许 napi 宏使用的 cfg 条件
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"noop\", \"used_linker\"))", "cfg(debug_assert)"] }

[dependencies]
napi = { version = "2.16.8", features = ["tokio_rt", "napi6", "serde-json"] }
napi-derive = "2.16.9"
lazy_static = "1"
tokio = { version = "1", features = ["sync", "time"] }
steamworks = { path = "./steamworks-rs", features = ["serde"] }
serde = "1"
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
